# MyCat

./: .gitignore  Cargo.toml  README.md  build.txt  buildEXE.ps1  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  tsconfig.json  tsconfig.node.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.nsi.template  tauri.windows.conf.json
src-tauri/assets/locales/: en-US.json  vi-VN.json  zh-CN.json
src-tauri/assets/models/Bamboo/standard/: demomodel.cdi3.json  demomodel.moc3  demomodel.model3.json  demomodel.physics3.json
src-tauri/assets/models/Cat/gamepad/: demomodel3.cdi3.json
src-tauri/assets/models/Century/standard/: cat.cdi3.json  cat.moc3  cat.model3.json
src-tauri/assets/models/Consonance/standard/: demomodel.cdi3.json  demomodel.moc3
src-tauri/assets/models/Hanato/standard/: 00cat.model3.json  0cat.model3.json  Amotion01.exp3.json  Amotion02.exp3.json  Scene1.motion3.json  Scene2.motion3.json  Scene3.motion3.json  cat.model3.json  cat0.model3.json  cat1.model3.json  cat6.model3.json  motion01.exp3.json  motion02.exp3.json  motion03.exp3.json  motion05.exp3.json  motion06.exp3.json  motion07.exp3.json  test.cdi3.json  test.moc3  test.model3.json  test.physics3.json
src-tauri/assets/models/Kitten/standard/: cat.cdi3.json  cat.moc3  cat.model3.json  cat.physics3.json  live2d_expression1.exp3.json
src-tauri/assets/models/Klee/standard/: cat.cdi3.json  cat.physics3.json
src-tauri/assets/models/Kokomi/standard/: Scene1.motion3.json  Untitled Animation.can3  cat.cdi3.json  cat.moc3  cat.model3.json  cat.physics3.json  expression1.exp3.json  expression3.exp3.json
src-tauri/assets/models/Mahiro/standard/: cat.model3.json  expression10.exp3.json  expression11.exp3.json  expression12.exp3.json  expression9.exp3.json  haole.cdi3.json  haole.moc3  haole.physics3.json
src-tauri/assets/models/Momoka/standard/: cat.model3.json  expression1.exp3.json  expression2.exp3.json  expression3.exp3.json  expression4.exp3.json  mmk live.cdi3.json  mmk live.moc3  mmk live.physics3.json
src-tauri/assets/models/Nalin/keyboard/: cat.cdi3.json  cat.moc3  cat.physics3.json  demomodel2.cdi3.json  live2d_expression0.exp3.json  live2d_expression1.exp3.json  live2d_motion2.flac  live2d_motion4.motion3.json
src-tauri/assets/models/Nalin/standard/: cat.moc3  cat.model3.json  cat_Mioto.cdi3.json  demomodel.cdi3.json  live2d_expression0.exp3.json  live2d_motion1.flac  live2d_motion1.motion3.json  (+4 more)
src-tauri/assets/models/keyboard/: demomodel2.cdi3.json
src-tauri/assets/models/standard/: demomodel.cdi3.json
src-tauri/icons/: icon.icns
src-tauri/locales/nsis/: Vietnamese.nlf
src-tauri/src/: lib.rs
(+101 files in other folders)
