[workspace]
resolver = "2"
members = [ "src-tauri" ]

[profile.release]
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
debug-assertions = false
overflow-checks = false
lto = true

[workspace.dependencies]
tauri = "2.4.0"
tauri-build = "2.4.0"
tauri-plugin = { version = "2.4.0", features = ["build"] }

tauri-plugin-os = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-opener = "2.4.0"
tauri-plugin-pinia = "3.0.0" 
tauri-plugin-log = "2.6.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-prevent-default = "1.1.0"
tauri-plugin-single-instance = "2.3.2" 
tauri-plugin-autostart = "2.5.0"
tauri-plugin-macos-permissions = "2.0.0-rc.3"
tauri-plugin-dialog = "2.3.2"
tauri-plugin-fs = "2.4.1"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-global-shortcut = "2.3.0"

# Các dependency khác
serde = "1"
serde_json = "1"
fs_extra = "1"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
tauri-plugin-custom-window = { path = "./src-tauri/src/plugins/window" }
