[package]
name = "LoveCat"
version = "0.0.1"
description = "A Tauri App"
authors = [ "Chill4Share" ]
edition = "2024"

[lib]
name = "bongo_cat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Sửa ở đây: kế thừa từ workspace
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["tray-icon", "protocol-asset", "macos-private-api", "image-png"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tauri-plugin-custom-window.workspace = true
fs_extra.workspace = true

# Sửa ở đây: tất cả các plugin đều kế thừa từ workspace
tauri-plugin-os = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-pinia = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-prevent-default = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-macos-permissions = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }

# Các dependency khác
rdev = { git = "https://github.com/kunkunsh/rdev" }
gilrs = { git = "https://github.com/ayangweb/gilrs", default-features = false, features = ["xinput"] }

[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel.workspace = true

[features]
cargo-clippy = []